src/style.css
/* ... */
.services__icon {
    height: 3.5rem;
    width: 3.5rem;
    padding: .75rem;
    margin-bottom: .5rem;
    background-color: var(--light-red);
    border-radius: 10px;
    color: var(--red);
}

.services__detail-list {
    display: flex;
    flex-direction: column;
    gap: .5rem;
}

.services__detail {
    display: flex;
    gap: .5rem;
}

.services__detail .icon--check {
    margin-top: .3rem;
    width: 10%;
    color: var(--red);
}

.services__detail-body {
    width: 90%;
    display: flex;
    flex-direction: column;
    gap: .1rem;
    text-align: left;
}

.services__detail-body h4 {
    font-size: 1.125rem;
    font-weight: 500;
}

.services__detail-body p {
    color: rgba(49, 65, 88, 0.8);
    font-size: 0.95rem;
    line-height: 1.4;
}

/* SECTION WHY-US */

#why-us {
    display: flex;
    flex-direction: column;
    background-color: rgba(49, 65, 88, 0.05);
    padding: var(--padding-page);
}

#why-us h2 {
    font-size: 2rem;
    font-weight: 500;
    text-align: center;
    margin-bottom: .5rem;
}

#why-us>p {
    text-align: center;
    margin: 0 auto 3rem auto;
    color: rgba(49, 65, 88, 0.8);
    max-width: 40rem;
}

.why-us__list {
    display: flex;
    justify-content: center;
    gap: 2rem;
}

.why-us__item {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: .3rem;
    padding: 1rem;
    border-radius: .625rem;
    width: 20rem;
    text-align: center;
}

.why-us__icon {
    height: 4rem;
    width: 4rem;
    padding: 1rem;
    margin-bottom: .5rem;
    background-color: var(--light-red);
    border-radius: 50%;
    color: var(--red);
}

.why-us__item h3 {
    font-size: 1.125rem;
    font-weight: 500;
}

.why-us__item p {
    color: rgba(49, 65, 88, 0.8);
}

/* Section Zone d'intervention */

#zone {
    display: flex;
    padding: var(--padding-page);
    gap: 3rem;
}

.zone__info,
.zone__map {
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 50%;
}

.zone__info h2 {
    font-size: 2rem;
    font-weight: 500;
    margin-bottom: .5rem;
}

.zone__info>p {
    color: rgba(49, 65, 88, 0.8);
    margin-bottom: 2rem;
}

.zone__city {
    display: flex;
    align-items: center;
    gap: .4rem;
}

.icon--check {
    height: 1.25rem;
    width: 1.25rem;
    color: var(--red);
}

#map {
    height: 420px;
    border-radius: 5px;
    overflow: hidden;
    border: 1px solid rgba(0, 0, 0, .08);
    z-index: 0;
}

/* Section avis clients */

#reviews {
    padding: var(--padding-page);
    background-color: rgba(49, 65, 88, 0.05);
}

#reviews h2 {
    font-size: 2rem;
    font-weight: 500;
    text-align: center;
    margin-bottom: .5rem;
}

#reviews>p {
    text-align: center;
    margin: 0 auto 3rem auto;
    color: rgba(49, 65, 88, 0.8);
}

.reviews__disclaimer {
    text-align: center;
    color: rgba(49, 65, 88, 0.6);
    margin-bottom: 2rem;
}

.reviews__list {
    display: flex;
    justify-content: center;
    gap: 2rem;
    margin-bottom: 1rem;
}

.reviews__item {
    background-color: #fff;
    padding: 1.5rem;
    border-radius: .625rem;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    width: 25rem;
    display: flex;
    flex-direction: column;
    gap: .5rem;
    /* rendre l'élément flou */
    filter: blur(4px);
    opacity: .6;
}

.reviews__item hr {
    border: none;
    border-top: 1px solid rgba(49, 65, 88, 0.1);
    margin-top: auto;
}

.stars {
    display: flex;
    gap: .05rem;
}

.star-icon {
    color: var(--red);
    height: 1.25rem;
    width: 1.25rem;
}

.reviews__item-text {
    color: rgba(49, 65, 88, 0.9);
    font-size: 0.95rem;
    line-height: 1.4;
    font-style: italic;
}

.reviews__author-location {
    color: rgba(49, 65, 88, 0.6);
    font-size: 0.85rem;
}

/* Section CTA */

#cta {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: var(--padding-page);
    gap: 1rem;
    background-color: var(--red);
}

#cta h2 {
    font-size: 2rem;
    font-weight: 500;
    color: #fff;
}

#cta>p {
    color: rgba(255, 255, 255, 0.8);
    text-align: center;
    max-width: 40rem;
}

.cta__actions {
    display: flex;
    gap: 1rem;
    margin-top: .5rem;
}

#cta .btn--primary,
#cta .btn--outline {
    padding: .75rem 2rem;
}

#cta .btn--primary {
    background-color: #fff;
    color: var(--red);
}

#cta .btn--primary:hover {
    background-color: rgb(230, 230, 230);
}

#cta .btn--outline {
    display: flex;
    align-items: center;
    background-color: transparent;
    border: 2px solid #fff;
    color: #fff;
    gap: .5rem;
}

.btn__icon,
.footer__icon {
    height: 1.25rem;
    width: 1.25rem;
}

.cta__title-full {
    display: inline;
}

.cta__title-short {
    display: none;
}

/* Footer */

#footer {
    display: flex;
    flex-direction: column;
    background-color: var(--blue);
}

.footer__container {
    display: flex;
    justify-content: space-between;
    color: #fff;
    padding: 2rem 10%;
    font-size: 0.9rem;
}

.footer__section {
    display: flex;
    flex-direction: column;
    gap: .5rem;
    max-width: 20rem;
    line-height: 1.3;
}

.footer__section h3 {
    font-size: 1.25rem;
    font-weight: 500;
    margin-bottom: .5rem;
}

.footer__contact-list {
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.footer__contact-list a,
.footer__contact-item .footer__city {
    color: #fff;
    font-size: 1rem;
    font-weight: 600;
}

.footer__contact-item {
    display: flex;
    gap: .7rem;
}

.footer__contact-item svg {
    margin-top: .15rem;
}

.footer__contact-item>div {
    color: rgba(255, 255, 255, 0.8);
}

.footer__zone-list li {
    list-style-type: circle;
    margin-left: .8rem;
    color: rgba(255, 255, 255, 0.8);
}

.footer__section>p {
    color: rgba(255, 255, 255, 0.8);
}

#footer hr {
    border: none;
    border-top: 1px solid rgba(255, 255, 255, 0.2);
    margin: 1rem 2rem;
}
/* ... */

